Fix Input clipboardButton styling on small screens.

--- a/components/Input/Input.css
+++ b/components/Input/Input.css
@@ -157,6 +157,15 @@
         flex-direction: column;
         align-items: stretch;
     }
+
+    .innerContainer {
+        flex-direction: column;
+        align-items: stretch;
+    }
+
+    .copyButton{
+        margin: 5px 0 0 0;
+    }
     
     .inputLabel{
         flex-basis: auto;
